Tes assigment logical and dan logical or

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
     <div>Hello JS</div>
 </body>
-<script src="./app.js" defer></script>
+<script src="./appjs_nestedif.js" defer></script>
 </html>
