--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
     <div>Hello JS</div>
 </body>
-<script src="./appjs_array.js" defer></script>
+<script src="./appjs_arraypart_two.js" defer></script>
 </html>
