testing: Object reference RAM and comparison

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
     <div>Hello JS</div>
 </body>
-<script src="./appjs_objects.js" defer></script>
+<script src="./appjs_objectsdua.js" defer></script>
 </html>
