testing: Loop while for of dan for in

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
     <div>Hello JS</div>
 </body>
-<script src="./appjs_loopingsdua.js" defer></script>
+<script src="./appjs_forloops.js" defer></script>
 </html>
