--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
 <body>
     <div>Hello JS</div>
 </body>
-<script src="./appjs_functiondua.js" defer></script>
+<script src="./appjs_functionscope.js" defer></script>
 </html>
