testing: scope dan hoisting

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div>Hello JS</div>
+    <!-- <div>
+        <button>Jangan Dipencet !!!</button>
+    </div> -->
 </body>
-<script src="./appjs_functionscope.js" defer></script>
+<script src="./appjs_hoisting.js" defer></script>
 </html>
