testing: array methods

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,5 @@
         <button>Jangan Dipencet !!!</button>
     </div> -->
 </body>
-<script src="./appjs_hoisting.js" defer></script>
+<script src="./arraymethods/appjs_arrayfunction.js" defer></script>
 </html>
