--- a/src/doms/index.html
+++ b/src/doms/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colt Steele DOM JS</title>
+    <link rel="stylesheet" type="text/css" href="appjs_doms.css">
 </head>
 <body>
-    <div></div>
+    <h1>Website Latihan Saya Colt Steele</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae. Ullam, laboriosam.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere necessitatibus repudiandae veritatis!</p>
+
+    <form action="">
+        <input type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
+        <input type="password" placeholder="password">
+        <input type="submit">
+    </form>
+
+    <ul>
+        <li class="special">Urutan Pertama</li>
+        <li>Urutan Kedua</li>
+        <li class="special">Urutan Ketiga</li>
+    </ul>
+    <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing">
 </body>
-<script src="./doms/appjs_doms.js" defer></script>
+<script src="appjs_doms.js" defer></script>
 </html>
