testing: dom element javascript

--- a/src/doms/index.html
+++ b/src/doms/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Website Latihan Saya Colt Steele</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae. Ullam, laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere necessitatibus repudiandae veritatis!</p>
+    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere necessitatibus repudiandae veritatis!</p>
 
-    <form action="">
+    <form id="form_input" action="">
         <input type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
         <input type="password" placeholder="password">
         <input type="submit">
@@ -23,7 +23,7 @@
         <li>Urutan Kedua</li>
         <li class="special">Urutan Ketiga</li>
     </ul>
-    <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing">
+    <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing" loading="lazy">
 </body>
 <script src="appjs_doms.js" defer></script>
 </html>
