--- a/src/doms/index.html
+++ b/src/doms/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,24 @@
     <title>Colt Steele DOM JS</title>
     <link rel="stylesheet" type="text/css" href="appjs_doms.css">
 </head>
+
 <body>
-    <h1>Website Latihan Saya Colt Steele</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae. Ullam, laboriosam.</p>
-    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere necessitatibus repudiandae veritatis!</p>
+    <h1 class="header">Website Latihan Saya Colt Steele</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis
+        expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae.
+        Ullam, laboriosam.</p>
+    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto
+        soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere
+        necessitatibus repudiandae veritatis!</p>
+    <p class="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis neque quasi ipsa recusandae!
+        Quaerat laborum totam rem, culpa maxime neque molestias reiciendis illum. Tempora laudantium nulla repudiandae
+        odit amet repellendus.
+
+    </p>
 
     <form id="form_input" action="">
-        <input type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
-        <input type="password" placeholder="password">
+        <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
+        <input class="inputdata" type="password" placeholder="password">
         <input type="submit">
     </form>
 
@@ -23,7 +34,19 @@
         <li>Urutan Kedua</li>
         <li class="special">Urutan Ketiga</li>
     </ul>
-    <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing" loading="lazy">
+
+    <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing"
+        loading="lazy">
+
+    <!-- Selector dengan spesifik ul dan section -->
+    <section>
+        <ul>
+            <li>Wortel</li>
+            <li class="special">Kacang</li>
+            <li>Tempe</li>
+        </ul>
+    </section>
 </body>
 <script src="appjs_doms.js" defer></script>
+
 </html>
