--- a/src/domsmanipulat/index.html
+++ b/src/domsmanipulat/index.html
@@ -14,9 +14,20 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis
         expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae.
         Ullam, laboriosam.</p>
-    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto
-        soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere
-        necessitatibus repudiandae veritatis!</p>
+
+    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+
+        Iste quas quo modi reiciendis iusto
+        soluta, inventore, corrupti omnis nam qui tempora consequatur tempore.
+
+        <b>Bold teks isi paragraf</b>
+        <b style="display: none;">SAMPEL Display Bold</b>
+
+        Provident, ut! Iusto facere
+        necessitatibus repudiandae veritatis!
+
+        <script>console.log('hello inner text vs text content')</script>
+    </p>
     <p class="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis neque quasi ipsa recusandae!
         Quaerat laborum totam rem, culpa maxime neque molestias reiciendis illum. Tempora laudantium nulla repudiandae
         odit amet repellendus.
