--- a/src/domsmanipulat2/index.html
+++ b/src/domsmanipulat2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colt Steele DOM JS</title>
-    <link rel="stylesheet" type="text/css" href="appjs_domsmanip.css">
+    <link rel="stylesheet" type="text/css" href="appjs_domsmanip2.css">
 </head>
 
 <body>
@@ -14,32 +14,24 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet maxime voluptate illo quidem tempora omnis
         expedita adipisci deserunt reiciendis et labore commodi vel accusamus recusandae exercitationem, voluptas quae.
         Ullam, laboriosam.</p>
-
-    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-
-        Iste quas quo modi reiciendis iusto
-        soluta, inventore, corrupti omnis nam qui tempora consequatur tempore.
-
-        <b>Bold teks isi paragraf</b>
-        <b style="display: none;">SAMPEL Display Bold</b>
-
-        Provident, ut! Iusto facere
-        necessitatibus repudiandae veritatis!
-
-        <script>console.log('hello inner text vs text content')</script>
-    </p>
+    <p id="paragrafdua">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quas quo modi reiciendis iusto
+        soluta, inventore, corrupti omnis nam qui tempora consequatur tempore. Provident, ut! Iusto facere
+        necessitatibus repudiandae veritatis!</p>
     <p class="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis neque quasi ipsa recusandae!
         Quaerat laborum totam rem, culpa maxime neque molestias reiciendis illum. Tempora laudantium nulla repudiandae
         odit amet repellendus.
+
     </p>
 
     <form id="form_input" action="">
-        <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
-        <input class="inputdata" type="password" placeholder="password">
+        <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing" value="username input saja">
+        <input class="inputdata" type="password" placeholder="password" value="password sandi saja ini">
+        <input type="checkbox" checked="true">
+        <input type="range" min="100" max="500" step="50">
         <input type="submit">
     </form>
 
-    <ul id="list_urutan">
+    <ul>
         <li class="special">Urutan Pertama</li>
         <li>Urutan Kedua</li>
         <li class="special">Urutan Ketiga</li>
@@ -57,6 +49,6 @@
         </ul>
     </section>
 </body>
-<script src="appjs_domsmanip.js" defer></script>
+<script src="appjs_domsmanip2.js" defer></script>
 
 </html>
