testing: manipulasi dom dengan src img dan a href

--- a/src/domsmanipulat2/index.html
+++ b/src/domsmanipulat2/index.html
@@ -25,7 +25,7 @@
 
     <form id="form_input" action="">
         <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing" value="username input saja">
-        <input class="inputdata" type="password" placeholder="password" value="password sandi saja ini">
+        <input class="inputdata" type="password" name="passwordinput"  placeholder="password" value="">
         <input type="checkbox" checked="true">
         <input type="range" min="100" max="500" step="50">
         <input type="submit">
@@ -48,6 +48,9 @@
             <li>Tempe</li>
         </ul>
     </section>
+
+    <h2>Href Sampel</h2>
+    <a href="https://unsplash.com/photos/9SWHIgu8A8k" target="_blank">Kucing lucu </a>
 </body>
 <script src="appjs_domsmanip2.js" defer></script>
 
