testing: get set attribute, value, src, local attribute

--- a/src/domsmanipulat3/index.html
+++ b/src/domsmanipulat3/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colt Steele DOM JS</title>
-    <link rel="stylesheet" type="text/css" href="appjs_domsmanip2.css">
+    <link rel="stylesheet" type="text/css" href="appjs_domsmanip3.css">
 </head>
 
 <body>
@@ -24,16 +24,9 @@
     </p>
 
     <form id="form_input" action="">
-        <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing" value="username input saja">
-        <input class="inputdata" type="password" name="passwordinput"  placeholder="password" value="">
-        <input type="checkbox" checked="true">
-        <input type="range" min="100" max="500" step="50">
+        <input class="inputdata" type="text" name="teksinput" id="teksinput" placeholder="Nama Kucing">
+        <input class="inputdata" type="password" placeholder="password">
         <input type="submit">
-    </form>
-
-    <form action="" id="form_attribute">
-        <h3>Range Untuk Set Attribute get Attribute</h3>
-        <input type="range" name="rangeminus" id="rangeminus" max="100" min="10" value="90">
     </form>
 
     <ul>
@@ -43,7 +36,7 @@
     </ul>
 
     <img id="fotokucing" src="https://source.unsplash.com/KHBvwAnWFmc" crossorigin="anonymous" alt="FotoKucing"
-        loading="lazy">
+        loading="lazy" width="100">
 
     <!-- Selector dengan spesifik ul dan section -->
     <section>
@@ -53,10 +46,7 @@
             <li>Tempe</li>
         </ul>
     </section>
-
-    <h2>Href Sampel</h2>
-    <a href="https://unsplash.com/photos/9SWHIgu8A8k" target="_blank">Kucing lucu </a>
 </body>
-<script src="appjs_domsmanip2.js" defer></script>
+<script src="appjs_domsmanip3.js" defer></script>
 
 </html>
