--- a/src/domsmanipulat5/index.html
+++ b/src/domsmanipulat5/index.html
@@ -20,7 +20,6 @@
     <p class="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis neque quasi ipsa recusandae!
         Quaerat laborum totam rem, culpa maxime neque molestias reiciendis illum. Tempora laudantium nulla repudiandae
         odit amet repellendus.
-
     </p>
 
     <form id="form_input" action="">
@@ -40,6 +39,7 @@
 
     <!-- Selector dengan spesifik ul dan section -->
     <section>
+        <h1>List Element</h1>
         <ul>
             <li>Wortel</li>
             <li class="special">Kacang</li>
@@ -47,10 +47,32 @@
         </ul>
     </section>
 
+    <section id="ul_adjacent">
+        <h1>Insert Adjacent Element</h1>
+        <ul>
+            <li>Kacang</li>
+            <li>Timun</li>
+            <li>Wortel</li>
+        </ul>
+    </section>
 
-    <!-- MANIPULASI KELAS  -->
+    <section id="ul_appendprepend">
+        <h1>Insert Prepend Append Element</h1>
+        <ul>
+            <li>Tongkol</li>
+            <li>Hiu</li>
+            <li>Paus</li>
+        </ul>
+    </section>
+
+    <p id="p_appendprepends">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi itaque necessitatibus voluptas minima odit aspernatur incidunt pariatur? Et voluptatum similique enim ex aut minima autem atque odio ea vel!
+    </p>
+
+
+    <!-- MANIPULASI Element Todo list  -->
     <div>
-        <h2>Manipulasi Kelas Todo</h2>
+        <h2>Manipulasi Element Todo</h2>
         <ul id="todolist">
             <li class="todo">Beri makan kucing <button>x</button></li>
             <li class="todo">Menyiram tanaman <button>x</button></li>
