quiz: membuat papan skor pertandingan dengan data JSON yang ada

--- a/src/domsmanipulattest/index.html
+++ b/src/domsmanipulattest/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div>
-        <span></span>
+    <h1>Papan Skor Pertandingan 1</h1>
+    <div id="hasil_pertandingan">
     </div>
 </body>
 <script src="appjs_baskets.js" defer></script>
