quiz: score board table dengan data dan buat element li untuk isi tabel

--- a/src/domsmanipulattest/index.html
+++ b/src/domsmanipulattest/index.html
@@ -7,12 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Latihan Skor Basket NBA</title>
     <link rel="stylesheet" href="appjs_baskets.css" type="text/css">
+    <script src="appjs_baskets.js" defer></script>
 </head>
 
 <body>
     <h1>Papan Skor Pertandingan 1</h1>
-    <div id="hasil_pertandingan">
+    <div id="papan_skor1">
     </div>
+
+    <br>
+    <br>
+
+    <h1>Papan Skor Pertandingan 2</h1>
+    <div id="papan_skor2"></div>
 </body>
-<script src="appjs_baskets.js" defer></script>
 </html>
