quiz: navigasi button on hover click

--- a/src/eventsp1/index.html
+++ b/src/eventsp1/index.html
@@ -8,8 +8,32 @@
 </head>
 <body>
     <div class="content" >
+        <h1>Event Listener</h1>
+        <p>Cara event listener cara salah</p>
+        <button id="tombol_eventsalah">Klik Cara Salah</button>
+        <button id="tombol_eventbenar">Klik Cara Benar AddEventListener</button>
 
+        <p>Listener Add Event</p>
+        <button id="tombol_klikevent">Tombol Klik Event Listener</button>
     </div>
+
+    <!-- UNTUK SCROLL EVENT -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa numquam, beatae odio quidem ab rem modi voluptas recusandae minus dicta debitis veniam aliquam iure ut officia dolor nihil ipsam maiores!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis nesciunt rem vero. Excepturi libero consequatur quaerat nisi quis dolorum corporis placeat unde vero. Assumenda asperiores eligendi rem provident voluptas corporis?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem reprehenderit sequi aliquam. Sed molestiae excepturi ipsam quae sunt cumque eum corporis dolor ullam, culpa corrupti suscipit dolore architecto consequatur voluptate!</p>
 </body>
 <script src="appjs_event1.js" defer></script>
 </html>
