testing: event handler multiple

--- a/src/eventsp2/index.html
+++ b/src/eventsp2/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tombol Kabur</title>
-    <link rel="stylesheet" href="appjs_event1test.css">
+    <title>Event Listener</title>
+    <link rel="stylesheet" href="appjs_event2.css">
 </head>
 <body>
     <div>
-        <button id="tombol_nakals" class="btn red">Tombol Nakal :P</button>
+        <h1>Pilih Warna Kotak</h1>
+        <section id="boxes">
+
+        </section>
     </div>
 </body>
-<script src="appjs_event1test.js" defer></script>
+<script src="appjs_event2.js" defer></script>
 </html>
-
-
