testing: keypress event

--- a/src/eventsp2/index.html
+++ b/src/eventsp2/index.html
@@ -14,6 +14,13 @@
 
         </section>
     </div>
+
+    <div>
+        <h1>Keypress Event</h1>
+        <div>
+            <input type="text" name="inputkey" id="inputkey">
+        </div>
+    </div>
 </body>
 <script src="appjs_event2.js" defer></script>
 </html>
