quiz: keycode event dan baca input untuk todolist

--- a/src/eventsp2/index.html
+++ b/src/eventsp2/index.html
@@ -17,8 +17,36 @@
 
     <div>
         <h1>Keypress Event</h1>
+        <p>Semua key keyboard yang telah ditekan setelah keydown. Kecuali tombol Shift, Alt, Ctrl, Caps Lock</p>
         <div>
-            <input type="text" name="inputkey" id="inputkey">
+            <input type="text" name="inputkey" id="inputkey" placeholder="nama panjang">
+        </div>
+    </div>
+
+    <div>
+        <h1>Keydown Event</h1>
+        <p>Semua key keyboard yang ditekan ke bawah</p>
+        <div>
+            <input type="text" name="input_keydown" id="input_keydown" placeholder="Input keydown">
+        </div>
+    </div>
+
+    <div>
+        <h1>Keyup Event</h1>
+        <p>Semua key yang telah selesai ditekan dan kondisi key naik ke atas atau dilepaskan</p>
+        <div>
+            <input type="text" name="input_keyup" id="input_keyup" placeholder="Input keyup">
+        </div>
+    </div>
+
+    <div>
+        <h1>Daftar Makanan</h1>
+        <p>Contoh penggunaan key event</p>
+        <div>
+            <input type="text" id="input_makanan" name="input_makanan" placeholder="Tambahkan daftar Enter">
+        </div>
+        <div>
+            <ul id="daftar_item"></ul>
         </div>
     </div>
 </body>
