quiz: Game koin orang

--- a/src/eventsp3gamecoin/index.html
+++ b/src/eventsp3gamecoin/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h3>Skor Koin : 0</h3>
+    <h3 id="skorh1">Skor Koin : 0</h3>
 
     <img id="player" src="https://media.tenor.com/images/0791eb3858075aca85eed5ecfe08c778/tenor.gif" alt=""
         loading="lazy" width="100">
