--- a/src/eventsp4/index.html
+++ b/src/eventsp4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Input Form Events</title>
+    <title>Input dan Change Form Events</title>
     <link rel="stylesheet" href="appjs_eventsp4.css">
 </head>
 
@@ -13,12 +13,13 @@
     <div>
         <!-- <form id="kirimform" action="/KACAU_FORM" method="get"> -->
         <form id="kirimform">
-            <input type="text" placeholder="Nomor Rekening" id="norekening">
+            <input type="text" placeholder="Nomor Rekening" id="norekening" name="norekening">
             <label for="cekboxterms">
                 <p>Saya setuju dengan ketentuan berlaku</p>
                 <input type="checkbox" id="cekboxterms" name="cekboxterms">
             </label>
-            <select name="select_menu" id="select_menu">
+            <select name="select_menu" id="select_menu" name="select_menu">
+                <option value="" disabled="disabled" selected="true">Pilih sayuran</option>
                 <option value="terong">Terong</option>
                 <option value="asparagus">Asparagus</option>
                 <option value="wortel">Wortel</option>
