Update async testing

--- a/src/asyncjs/async2/index.html
+++ b/src/asyncjs/async2/index.html
@@ -13,6 +13,28 @@
     <div>
         <button id="tombol_callback">Gerakkan Saya Lagi</button>
     </div>
+    <br>
+    <br>
+    <div>
+        <button id="tombolcallbacksukses">Gerakan Callback</button>
+    </div>
+
+    <table id="tabel">
+        <thead>
+            <tr>
+                <th>The table header</th>
+                <th>The table header</th>
+                <th>The table header</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>The table body</td>
+                <td style="display: none;">with two columns</td>
+                <td style="display: none;">with three columns</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 <script src="appjs_async2.js" defer></script>
 </html>
