testing: http request nested dengan XMLHttpRequest

--- a/src/asyncjs/async5/index.html
+++ b/src/asyncjs/async5/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTTP Request</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="appjs_http1.css">
 </head>
 <body>
-    <div></div>
+    <div id="result_detailplanet">
+
+    </div>
 </body>
 <script src="appjs_http1.js" defer></script>
 </html>
