quiz: async await parallel dan serial

--- a/src/asyncjs/async9/index.html
+++ b/src/asyncjs/async9/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="appjs_asyncawait2.css">
 </head>
 <body>
-    <div>
-
-    </div>
+    <div id="bodywarna">Hello Warna Ganti</div>
 </body>
 <script src="appjs_asyncawait2.js" defer></script>
 </html>
