testing: class js dan oop prototype

--- a/src/oopjs/classjs2/index.html
+++ b/src/oopjs/classjs2/index.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Class OOP JS</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="appjs_class.css">
+    <link rel="stylesheet" href="appjs_class2.css">
 </head>
 <body>
-    <div id="warnademo">
-        <div>WARNA DEMO</div>
-        <div>HELLO CONSTRUCTOR</div>
+    <div>
     </div>
 </body>
-<script src="appjs_class.js" defer></script>
+<script src="appjs_class2.js" defer></script>
 </html>
