testing: Class method dan constructor

--- a/src/oopjs/classjs2/index.html
+++ b/src/oopjs/classjs2/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="appjs_class2.css">
 </head>
 <body>
-    <div>
+    <div id="classwarna">
+        Latar Belakang Warna
     </div>
 </body>
 <script src="appjs_class2.js" defer></script>
