testing: coret coretan kode untuk datalist input

--- a/src/domsmanipulat6/index.html
+++ b/src/domsmanipulat6/index.html
@@ -56,6 +56,22 @@
             <li class="todo">Menanam pohon <button>x</button></li>
         </ul>
     </div>
+
+    <!-- AUTOCOMPLETE INPUT DENGAN DATALIST -->
+    <div id="autocomplete">
+        <label for="pilih-hewan">Pilih Nama Hewan:</label>
+        <input list="list-nama" id="pilih-hewan" name="pilih-hewan" />
+
+        <datalist id="list-nama">
+            <option value="Lele">
+            <option value="Tongkol">
+            <option value="Mujair">
+            <option value="Koi">
+            <option value="Mas">
+        </datalist>
+
+    </div>
+
 </body>
 <script src="appjs_doms6.js" defer></script>
 
