Tambah eksperimen data

--- a/src/jseksperimen/index.html
+++ b/src/jseksperimen/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eksperimen JS</title>
     <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
 
     <!-- AUTOCOMPLETE INPUT DENGAN DATALIST -->
@@ -21,6 +23,14 @@
 
     </div>
 
+    <div id="urldemo">
+        <!-- Tambahkan rel noopener dan noreferrer jika target _blank -->
+        <!-- ke dalam a tag. Untuk menambah keamanan pada url cross origin -->
+        <!-- https://web.dev/external-anchors-use-rel-noopener -->
+        <a href="https://web.dev" target="_blank" rel="noopener noreferrer">Link Web Dev</a>
+    </div>
+
 </body>
 <script src="app.js" defer></script>
+
 </html>
