Update latihan eksperimen

--- a/src/jseksperimen/index.html
+++ b/src/jseksperimen/index.html
@@ -31,6 +31,7 @@
     </div>
 
 </body>
-<script src="app.js" defer></script>
+<!-- <script src="app.js" defer></script> -->
+<script src="appjsfetch.js" defer></script>
 
 </html>
