Latihan pembuatan template eksperimen

--- a/src/jseksperimen/index.html
+++ b/src/jseksperimen/index.html
@@ -30,7 +30,12 @@
         <a href="https://web.dev" target="_blank" rel="noopener noreferrer">Link Web Dev</a>
     </div>
 
+
 </body>
+
+<div id="viewdata">
+    <!-- render data disini -->
+</div>
 <!-- <script src="app.js" defer></script> -->
 <script src="appjsfetch.js" defer></script>
 
